Rename OneDay->DailyRates, History->HistoryRates, OneDaySuccess->DailySuccess

--- a/exchangeratesapi.io.yaml
+++ b/exchangeratesapi.io.yaml
@@ -20,7 +20,7 @@ paths:
         - $ref: '#/components/parameters/symbols'
       responses:
         '200':
-          $ref: '#/components/responses/OneDaySuccess'
+          $ref: '#/components/responses/DailySuccess'
         '400':
           $ref: '#/components/responses/BadRequest'
   /{date}:
@@ -38,7 +38,7 @@ paths:
         - $ref: '#/components/parameters/symbols'
       responses:
         '200':
-          $ref: '#/components/responses/OneDaySuccess'
+          $ref: '#/components/responses/DailySuccess'
         '400':
           $ref: '#/components/responses/BadRequest'
   /history:
@@ -93,7 +93,7 @@ components:
       type: object
       additionalProperties:
         type: number
-    OneDay:
+    DailyRates:
       type: object
       required:
         - rates
@@ -107,7 +107,7 @@ components:
         date:
           $ref: '#/components/schemas/CalendarDate'
       example: {"rates":{"CAD":1.4959,"HKD":11.2301,"LVL":0.7093,"PHP":66.106,"DKK":7.4405,"HUF":268.18,"CZK":26.258,"AUD":1.5668,"RON":4.1405,"SEK":10.2215,"IDR":13281.14,"INR":66.21,"BRL":2.5309,"RUB":42.6974,"LTL":3.4528,"JPY":132.41,"THB":47.839,"CHF":1.4743,"SGD":2.0133,"PLN":4.0838,"BGN":1.9558,"TRY":2.1084,"CNY":9.8863,"NOK":8.1825,"NZD":1.9573,"ZAR":10.8264,"USD":1.4481,"MXN":18.4995,"EEK":15.6466,"GBP":0.8972,"KRW":1627.4,"MYR":4.8424,"HRK":7.2753},"base":"EUR","date":"2010-01-12"}
-    History:
+    HistoryRates:
       type: object
       required:
         - rates
@@ -140,18 +140,18 @@ components:
       # example: {"error":"time data '20100112' does not match format '%Y-%m-%d'"}
       # example: {"error":"end_at parameter format","exception":"time data '1581074895' does not match format '%Y-%m-%d'"}
   responses:
-    OneDaySuccess:
+    DailySuccess:
       description: Success
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/OneDay'
+            $ref: '#/components/schemas/DailyRates'
     HistorySuccess:
       description: Success
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/History'
+            $ref: '#/components/schemas/HistoryRates'
     BadRequest:
       description: Bad Request
       content:
