Rename npm package to exchangeratesapi-client

--- a/javascript-client/package.json
+++ b/javascript-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exchangeratesapi",
+  "name": "exchangeratesapi-client",
   "version": "1.0.0",
   "description": "Exchange rates API is a free service for current and historical foreign exchange rates published by the European Central Bank",
   "license": "MIT",
